--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
           Click the button to get a random quote!
         </p>
         <button id="random-quote-btn" class="btn btn-primary">
-          Get Random Quote
+          Choose Random Quote
+        </button>
+        <button id="random-quote-api-btn" class="btn btn-secondary">
+          Get Random Quote via API
         </button>
         <!-- <i id="quote-favorite-btn" class="far fa-star star-icon"></i> -->
       </div>
