--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
           Click the button to get a random quote!
         </p>
         <button id="random-quote-btn" class="btn btn-primary">
-          Choose Random Quote
+          Choose Random Quote <i class="fas fa-random"></i>
         </button>
         <button id="random-quote-api-btn" class="btn btn-secondary">
           Get Random Quote via API
+          <i class="fa fa-globe" aria-hidden="true"></i>
         </button>
         <!-- <i id="quote-favorite-btn" class="far fa-star star-icon"></i> -->
       </div>
