Integrate our own API service to the client app and enable CORS in the server app

--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,13 @@
         <button id="random-quote-btn" class="btn btn-primary">
           Choose Random Quote <i class="fas fa-random"></i>
         </button>
-        <button id="random-quote-api-btn" class="btn btn-secondary">
-          Get Random Quote via API
+        <button id="random-quote-public-api-btn" class="btn btn-secondary">
+          Get via API
           <i class="fa fa-globe" aria-hidden="true"></i>
+        </button>
+        <button id="random-quote-own-api-btn" class="btn btn-third">
+          Get via Own API
+          <i class="fa fa-server" aria-hidden="true"></i>
         </button>
         <!-- <i id="quote-favorite-btn" class="far fa-star star-icon"></i> -->
       </div>
